--- a/css/ui.css
+++ b/css/ui.css
@@ -1,3 +1,9 @@
+:root {
+    --main-color-one: #35423A;
+    --main-color-two: #ADBAB2;
+    --main-color-three: #242424;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -11,6 +17,7 @@ main {
     margin: auto;
 }
 
+/*      MENU        */
 .nav-container {
     height: 60px;
     background-color: black;
@@ -39,519 +46,71 @@ main {
     color: #fff;
 }
 
-:root {
-    --main-color-one: #35423A;
-    --main-color-two: #ADBAB2;
-    --main-color-three: #242424;
-}
 
-.header-image {
-    max-height: 250px;
+
+/* FOOTER   */
+footer {
+    background-color: var(--main-color-one);
+    height: fit-content;
     max-width: 100vw;
-    min-height: 150px;
-    background-color: var(--main-color-one);
-    color: azure;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
-.header-image img {
-    max-width: 90%;
-    margin: auto;
-    display: flex;
-}
-
-h1.site-name-placeholder {
-    font-size: 3rem;
-    /* line-height: 250px; */
-    margin: 0;
-}
-
-.header-image p {
-    display: none;
-    font-style: italic;
-    font-size: 0.8rem;
-    padding: 0 10px;
-}
-
-.site-info-container {
-    max-width: 1200px;
-    margin: auto;
-}
-
-.site-info {
-    height: 250px;
-    background-color: #35423A;
-    display: flex;
-}
-
-.left-info-image {
-    max-width: 450px;
-    height: 250px;
-    background-color: var(--main-color-three)
-}
-
-.left-info-image img {
-    max-width: 100%;
-    min-width: 200px;
-    height: 250px;
-    opacity: 50%;
-    object-fit: cover;
-}
-
-.center-site-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    width: 300px;
-    height: 250px;
-    background-color: var(--main-color-two);
-    background-color: var(--main-color-one);
-    background-size: cover;
-    padding: 0 10px;
-    text-align: center;
-    color: #fff;
-    font-weight: 200;
-    font-size: 0.95rem;
-}
-
-.center-site-info-header {
-    margin-bottom: 0;
-    padding-bottom: 5px;
-    max-width: 200px;
-    min-width: 150px;
-    margin-top: 5px;
-    font-weight: 500;
-    font-size: 0.8rem;
-    border-bottom: 1px dotted var(--main-color-two);
-}
-
-.welcome {
-    margin-bottom: 0;
-    margin-top: 5px;
-}
-
-/* .center-site-info p {
-    margin-bottom: 5px;
-} */
-.tagline {
-    margin-top: 1px;
-}
-
-.scroll-down {
-    width: 150px;
-    margin: 0 auto;
-}
-
-
-.new-posts-site-info {
-    width: 450px;
-    height: 250px;
-    background-color: var(--main-color-three);
-}
-
-.new-posts-site-info-header {
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-    height: 30px;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-.new-posts-site-info-header-text {
-    display: flex;
-    line-height: 30px;
-    justify-content: flex-end;
-    background-color: #35423A;
-    background: linear-gradient(45deg, transparent 20%, var(--main-color-one) 20%);
-    width: 258px;
-    height: 30px;
-    text-align: end;
-    padding-right: 10px;
-    color: #fff;
-}
-
-.new-posts-site-info-header-text h5 {
-    font-weight: 300;
-}
-
-/* .new-posts-site-info-header p {
-    color: #504E4E;
-    margin-left: 10px;
-    font-size: 0.8rem;
-    font-style: italic;
-} */
-
-.news-and-content {
-    text-align: center;
-    margin: 0;
-    color: #a7a5a5;
-    font-weight: 300;
-}
-
-.blog-and-sidebar {
-    max-width: 1200px;
-    display: grid;
-    grid-template-columns: [blog] 1fr [sidebar] 250px;
-    margin: auto;
-    min-height: 100vh;
-}
-
-.blog-posts-container {
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-}
-
-.blog-content {
-    display: grid;
-    min-height: 100vh;
-    /* max-width: 1000px; */
-    background-color: var(--main-color-three);
-    grid-column: blog;
-    align-content: space-between;
-}
-
-
-.blog-post {
-    background-color: #fff;
-}
-
-.blog-post li {
-    /* list-style: decimal; */
-    max-width: 750px;
-    margin: 10px auto;
-}
-
-.blog-post-text p {
-    margin: auto;
-    max-width: 800px;
-    margin-bottom: 10px;
-    font-size: 1.1rem;
-}
-
-.blog-post-text a {
-    color: #547060;
-    font-style: italic;
-}
-
-.blog-post-header {
-    height: 50px;
-    background-color: var(--main-color-three);
+.footer-content {
     display: flex;
     justify-content: space-between;
-}
-
-.blog-date {
-    height: 50px;
-    max-width: 300px;
-    min-width: 200px;
-    background: linear-gradient(45deg, var(--main-color-one) 80%, transparent 80%);
-}
-
-.blog-date h4 {
-    padding-left: 20px;
-    line-height: 50px;
-    max-width: 300px;
-    min-width: 210px;
-    color: #fff;
-}
-
-.blog-post-header-img img {
-    height: 50px;
-    width: 350px;
-    object-fit: cover;
-    opacity: 30%;
-
-}
-
-.blog-post-img-title {
-    position: relative;
-}
-
-.blog-post-main-img {
-    height: 300px;
-    width: 100%;
-    object-fit: cover;
-    filter: brightness(0.85);
-}
-
-.blog-post-title {
-    margin: 1% 2% 1% 2%;
-    text-align: center;
-    max-width: 700px;
-    min-width: 200px;
-    background-color: rgba(173, 186, 178, 0.85);
-    border-radius: 6px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 6px;
-
-}
-
-.blog-post-text {
-    margin: 3%;
-    /* font-size: 1.2rem; */
-}
-
-/* .gallery {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 850px;
+    align-items: center;
     gap: 20px;
+    min-height: 250px;
+    color: var(--main-color-two);
+    padding: 10px 5%;
+    max-width: 1000px;
     margin: auto;
+}
+
+.left-footer {
+    width: 20%;
+    min-width: 150px;
+}
+
+.left-footer li:hover {
+    color: #fff;
+    cursor: pointer;
+}
+
+.center-footer {
+    display: flex;
+    max-width: 300px;
+    min-width: 200px;
     justify-content: center;
-}
-
-.thumbnail img {
-    height: 150px;
-    width: 150px;
-    object-fit: cover;
-} */
-
-.wp-block-gallery {
-    display: flex;
-    /* display: none; */
-    flex-wrap: wrap;
-    max-width: 100%;
-    justify-content: center;
-    margin: 0;
-}
-
-
-.wp-block-gallery figure {
-    display: flex;
-    /* width: 200px;
-    height: 200px; */
-    /* margin: auto; */
-}
-
-/* figure.wp-block-image {
-    width: 200px;
-    height: 200px;
-} */
-
-/* .wp-block-image img {
-    /* max-width: fit-content;
-    max-height: 500px; 
-object-fit: cover;
-width: 150px;
-height: 150px;
-}*/
-.wp-block-image {
-    display: flex;
-    flex-direction: column;
     align-items: center;
 }
 
-.wp-block-gallery img {
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-}
-
-.wp-block-image>img {
-    max-width: 700px;
-    max-height: 700px;
-    object-fit: contain;
-    object-fit: cover;
-}
-
-figcaption {
-    font-size: 0.8rem;
-    font-style: italic;
-}
-
-
-#read-more {
-    margin: 3%;
-    display: flex;
-    justify-content: end;
-}
-
-#read-more a {
-    color: #fff;
-    padding: 10px;
-    border-radius: 6px;
-    font-style: italic;
-
-    font-size: 0.9rem;
-    background-color: var(--main-color-one);
-}
-
-#read-more:hover,
-#go-back:hover {
-    font-weight: 600;
-}
-
-#go-back {
-    margin: 3%;
-    display: flex;
-    justify-content: start;
-    width: fit-content;
-    color: #fff;
-    padding: 10px;
-    border-radius: 6px;
-    font-style: italic;
-    font-size: 0.9rem;
-    background-color: var(--main-color-one);
-    cursor: pointer;
-}
-
-.blog-post-info {
-    display: flex;
-    background-color: rgba(173, 186, 178, 0.9);
-    /* border-radius: 6px; */
-    /* margin: 3%; */
-    padding: 1% 3%;
-    justify-content: space-between;
-    font-style: italic;
-}
-
-.blog-post-info a {
-    font-weight: 500;
-}
-
-/* .load-more {
-    color: #ADBAB2;
-    margin: auto;
-    margin-bottom: 50px;
-}
-
-.load-more-link:hover {
-    font-style: italic;
-    cursor: pointer;
-} */
-
-
-
-.breadcrumbs {
-    margin: 5px 5% 0 5%;
-    /* margin-top: 5px; */
-    font-size: 0.85rem;
-    font-weight: 300;
-    display: flex;
-    gap: 15px
-}
-
-.breadcrumbs p {
-    margin: 0;
-}
-
-
-
-
-/* SINGLE BLOG POST PAGE */
-
-.single-blogpost-container,
-.contact-page-container,
-.fenty-beauty-container,
-.main-content {
-    max-width: 1200px;
-    background-color: #fff;
-    min-height: 100vh;
-    margin: auto;
-    padding-bottom: 30px;
+.right-footer {
+    width: 20%;
+    min-width: 150px;
     display: flex;
     flex-direction: column;
-    /* min-height: 500px; */
-}
-
-.main-post-img {
-    height: 400px;
-    width: 100%;
-    object-fit: cover;
-}
-
-.single-blogpost-container h1 {
-    margin: 0 5% 0 5%;
-    padding-top: 20px;
-}
-
-.single-blog-post-info {
-    display: flex;
-    margin-left: 5%;
-    gap: 40px;
-    font-size: 0.85rem;
-}
-
-.single-blog-post-text {
-    margin-left: 5%;
-    margin-right: 5%;
-}
-
-.single-blog-post-text li {
-    padding: 5px;
-}
-
-.single-blog-post-text a {
-    color: darkblue;
-    font-style: italic;
-}
-
-.single-blog-post-text iframe {
-    max-width: 100%;
-}
-
-.single-post-gallery {
-    cursor: pointer;
-}
-
-.category {
-    margin-left: 5%;
-    font-size: 0.85rem;
-}
-
-.category a {
-    font-style: italic;
-    font-weight: 500;
-}
-
-.blog-posts-category-container {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 3%;
     justify-content: center;
+    align-items: end;
 }
 
-.blog-post-container {
-    max-width: 300px;
-    min-width: 200px;
-    min-height: 270px;
-    max-height: fit-content;
-    margin: 10px;
-    border: 1px solid black;
-    background-color: var(--main-color-one);
-    /* background-color: white; */
-    border-radius: 6px;
-    overflow: hidden;
-    color: var(--main-color-two);
+.right-footer p {
+    margin-top: 0;
 }
 
-.blog-post-container h2,
-.blog-post-container p {
-    padding: 6px;
+.social-media {
+    display: flex;
+    min-height: 30px;
+    gap: 20px;
+    align-items: center;
+    flex-direction: row;
 }
 
-.blog-post-container p {
-    margin: 0;
+.social-media i:hover {
+    color: #fff;
 }
 
-.blog-post-container:hover {
-    background-color: #3f4d44;
-}
 
-.category-img {
-    width: 100%;
-    height: 120px;
-    object-fit: cover;
-    box-shadow: 0px 1px 5px black;
+.copyright {
+    text-align: center;
 }
-
-.category-filter-blog-text {}
