Footer update and page styling
Updated the footer with pages links that's not accessible for keyboard users as the sub menu wont open on tab.
Social media icons moved to the sidebar.
also made some styling changes on the discography page.

--- a/css/media.css
+++ b/css/media.css
@@ -39,13 +39,9 @@
         padding-top: 50px;
     }
 
-    /* .searchbar {
-        display: none;
+    .some-icons {
+        align-items: center;
     }
-
-    .newest-instagram {
-        display: none;
-    } */
 
     .newest-posts,
     .newest-comments,
@@ -93,6 +89,10 @@
         justify-content: center;
         margin-bottom: 20px;
         flex-direction: column;
+    }
+
+    .tracklist {
+        order: 2;
     }
 
     .cover-art {
@@ -161,6 +161,7 @@
     .right-footer {
         order: 1;
         align-items: center;
+        text-align: center;
     }
 
     .center-footer {
