--- a/css/media.css
+++ b/css/media.css
@@ -207,6 +207,7 @@
         z-index: 2;
         border-top: 1px solid #ADBAB2;
         display: none;
+        box-shadow: 0 7px 9px var(--main-color-one);
     }
 
     .main-menu.active {
