Added Privacy Policy page
and link to it in the footer

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -12,6 +12,7 @@
     10. BRAND PAGES GLOBAL STYLING
             10.1. BRAND PAGES > MUSIC PAGE 
     11. MODAL
+    12. PRIVACY POLICY
 
 **/
 
@@ -1119,4 +1120,18 @@ dialog img {
     max-height: inherit;
     object-fit: contain;
     display: flex;
+}
+
+/* 12. PRIVACY POLICY  */
+.pp-title {
+    font-weight: 700;
+    margin-bottom: 0;
+}
+
+.mail-to {
+    font-weight: 500;
+}
+
+.mail-to:hover {
+    font-style: italic;
 }
